load("@io_bazel_rules_docker//java:image.bzl", "java_image")
load("@io_bazel_rules_docker//lang:image.bzl", container_image = "app_layer")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "mosaic-rti-api",
    srcs = [
        "DATA.java",
        "TIME.java",
        ],
    deps = [
        '@maven//:org_apache_commons_commons-lang3',
    ],
)

java_image(
    name = "java_docker_image",
    srcs = ["Application.java"],
    layers = [
        ":java_image_library",
    ],
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_spring_web",
    ],
    main_class = "spring_boot_app.Application",
)