package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/carla/ambassador/*.java"]) +
        glob(["src/main/java/**/carla/carlaconnect/*.java"]) +
        glob(["src/main/java/**/carla/config/*.java"])
)

java_library(
    name = "mosaic-carla",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_gson_gson",

        "//fed/mosaic-sumo",
        "//lib/mosaic-interactions",
        "//lib/mosaic-utils",
        "//rti/mosaic-rti-api",
    ],
)