package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/environment/ambassador/*.java"]) +
        glob(["src/main/java/**/environment/config/*.java"])
)

java_library(
    name = "mosaic-environment",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_code_gson_gson",

        "//lib/mosaic-interactions",
        "//lib/mosaic-objects",
        "//lib/mosaic-utils",
        "//lib/mosaic-geomath",
        "//rti/mosaic-rti-api",
    ],
)