package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/output/ambassador/*.java"]) +
        glob(["src/main/java/**/output/generator/file/*.java"]) +
        glob(["src/main/java/**/output/generator/file/filter/*.java"]) +
        glob(["src/main/java/**/output/generator/file/format/*.java"]) +
        glob(["src/main/java/**/output/generator/file/write/*.java"]) +
        glob(["src/main/java/**/output/generator/websocket/*.java"])
)

java_library(
    name = "mosaic-output",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_apache_commons_commons_configuration2",
        "@maven//:com_google_guava_guava",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_java_websocket_Java_WebSocket",
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_apache_johnzon_johnzon_core",

        "//lib/mosaic-utils",
        "//lib/mosaic-geomath",
        "//lib/mosaic-interactions",
        "//lib/mosaic-objects",
        "//rti/mosaic-rti-api",
    ],
)