package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["delay/*.java"]) +
        glob(["gson/*.java"]) +
        glob(["transmission/*.java"])
)

java_library(
    name = "mosaic-communication",
    srcs = [
        ":srcs",
        ],
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_apache_commons_commons_math3",

        "//lib/mosaic-geomath",
        "//lib/mosaic-utils",
    ],
)