package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/**/model/delay/*.java"]) +
        glob(["src/main/**/model/gson/*.java"]) +
        glob(["src/main/**/model/transmission/*.java"])
)

java_library(
    name = "mosaic-communication",
    srcs = [
        ":srcs",
        ],
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_apache_commons_commons_math3",

        "//lib/mosaic-geomath",
        "//lib/mosaic-utils",
    ],
)