package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/database/*.java"]) +
        glob(["src/main/java/**/database/building/*.java"]) +
        glob(["src/main/java/**/database/persistence/*.java"]) +
        glob(["src/main/java/**/database/road/*.java"]) +
        glob(["src/main/java/**/database/route/*.java"]) +
        glob(["src/main/java/**/database/services/*.java"]) +
        glob(["src/main/java/**/database/spatial/*.java"])
)

java_library(
    name = "mosaic-database",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:org_xerial_sqlite_jdbc",
        "@maven//:javax_activation_activation",

        "//lib/mosaic-geomath",
        "//rti/mosaic-rti-api",
    ],
)