package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["*.java"])
)

java_library(
    name = "mosaic-docker",
    srcs = [
        ":srcs"
        ],
    deps = [
        '@maven//:commons_io_commons_io',
        '@maven//:org_apache_commons_commons_lang3',
        '@maven//:org_slf4j_slf4j_api',
    ]
)