package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/lib/geo/*.java"]) +
        glob(["src/main/java/**/lib/gson/*.java"]) +
        glob(["src/main/java/**/lib/math/*.java"]) +
        glob(["src/main/java/**/lib/misc/*.java"]) +
        glob(["src/main/java/**/lib/spatial/*.java"]) +
        glob(["src/main/java/**/lib/transform/*.java"])
)

java_library(
    name = "mosaic-geomath",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_google_code_gson_gson",
    ],
)