package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["application/*.java"]) +
        glob(["communication/*.java"]) +
        glob(["electricity/*.java"]) +
        glob(["environment/*.java"]) +
        glob(["mapping/*.java"]) +
        glob(["mapping/advanced/*.java"]) +
        glob(["traffic/*.java"]) +
        glob(["trafficsigns/*.java"]) +
        glob(["vehicle/*.java"])
)

java_library(
    name = "mosaic-interactions",
    srcs = [
        ":srcs",
        ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",

        "//rti/mosaic-rti-api",
        "//lib/mosaic-objects",
        "//lib/mosaic-geomath",
        "//lib/mosaic-utils",

    ],
)