package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/interactions/application/*.java"]) +
        glob(["src/main/java/**/interactions/communication/*.java"]) +
        glob(["src/main/java/**/interactions/electricity/*.java"]) +
        glob(["src/main/java/**/interactions/environment/*.java"]) +
        glob(["src/main/java/**/interactions/mapping/*.java"]) +
        glob(["src/main/java/**/interactions/mapping/advanced/*.java"]) +
        glob(["src/main/java/**/interactions/traffic/*.java"]) +
        glob(["src/main/java/**/interactions/trafficsigns/*.java"]) +
        glob(["src/main/java/**/interactions/vehicle/*.java"])
)

java_library(
    name = "mosaic-interactions",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",

        "//rti/mosaic-rti-api",
        "//lib/mosaic-objects",
        "//lib/mosaic-geomath",
        "//lib/mosaic-utils",
    ],
)