package(default_visibility = ["//visibility:public"])
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")


proto_library(
    name = "client_server_channel_messages_proto",
    srcs = glob(["src/main/resources/proto/ClientServerChannelMessages.proto"]),
)

java_proto_library(
    name = "client_server_channel_messages_java_proto",
    deps = [":client_server_channel_messages_proto"],
)


filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/coupling/*.java"])
)

java_library(
    name = "mosaic-network",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_findbugs_annotations",
        
        "//lib/mosaic-interactions",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//lib/mosaic-utils",
        "//rti/mosaic-rti-api",

        ":client_server_channel_messages_java_proto",
    ],
)