package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/lib/enums/*.java"]) +
        glob(["src/main/java/**/lib/objects/*.java"]) +
        glob(["src/main/java/**/lib/objects/addressing/*.java"]) +
        glob(["src/main/java/**/lib/objects/communication/*.java"]) +
        glob(["src/main/java/**/lib/objects/electricity/*.java"]) +
        glob(["src/main/java/**/lib/objects/environment/*.java"]) +
        glob(["src/main/java/**/lib/objects/mapping/*.java"]) +
        glob(["src/main/java/**/lib/objects/road/*.java"]) +
        glob(["src/main/java/**/lib/objects/traffic/*.java"]) +
        glob(["src/main/java/**/lib/objects/trafficlight/*.java"]) +
        glob(["src/main/java/**/lib/objects/trafficsign/*.java"]) +
        glob(["src/main/java/**/lib/objects/v2x/*.java"]) +
        glob(["src/main/java/**/lib/objects/v2x/etsi/*.java"]) +
        glob(["src/main/java/**/lib/objects/v2x/etsi/cam/*.java"]) +
        glob(["src/main/java/**/lib/objects/v2x/etsi/ivim/*.java"]) +
        glob(["src/main/java/**/lib/objects/vehicle/*.java"]) +
        glob(["src/main/java/**/lib/objects/vehicle/sensor/*.java"])
)

java_library(
    name = "mosaic-objects",
    srcs = [
        ":srcs",
        ],
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_io_commons_io",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_code_gson_gson",

        "//lib/mosaic-geomath",
        "//rti/mosaic-rti-api",
        "//lib/mosaic-utils",
    ],
)