package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["*.java"]) +
        glob(["config/*.java"]) +
        glob(["database/*.java"]) +
        glob(["graphhopper/*.java"]) +
        glob(["graphhopper/algorithm/*.java"]) +
        glob(["graphhopper/extended/*.java"]) +
        glob(["graphhopper/util/*.java"]) +
        glob(["norouting/*.java"]) +
        glob(["util/*.java"])
)

java_library(
    name = "mosaic-routing",
    srcs = [
        ":srcs",
        ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_carrotsearch_hppc",
        "@maven//:com_graphhopper_graphhopper_core",
        "@maven//:com_graphhopper_graphhopper_api",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//rti/mosaic-rti-api",
    ],
)