package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/routing/*.java"]) +
        glob(["src/main/java/**/routing/config/*.java"]) +
        glob(["src/main/java/**/routing/database/*.java"]) +
        glob(["src/main/java/**/routing/graphhopper/*.java"]) +
        glob(["src/main/java/**/routing/graphhopper/algorithm/*.java"]) +
        glob(["src/main/java/**/routing/graphhopper/extended/*.java"]) +
        glob(["src/main/java/**/routing/graphhopper/util/*.java"]) +
        glob(["src/main/java/**/routing/norouting/*.java"]) +
        glob(["src/main/java/**/routing/util/*.java"])
)

java_library(
    name = "mosaic-routing",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_carrotsearch_hppc",
        "@maven//:com_graphhopper_graphhopper_core",
        "@maven//:com_graphhopper_graphhopper_api",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//rti/mosaic-rti-api",
    ],
)