package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/util/*.java"]) +
        glob(["src/main/java/**/util/cli/*.java"]) +
        glob(["src/main/java/**/util/gson/*.java"]) +
        glob(["src/main/java/**/util/objects/*.java"]) +
        glob(["src/main/java/**/util/scheduling/*.java"])
)

java_library(
    name = "mosaic-utils",
    srcs = [
        ":srcs",
        ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:commons_cli_commons_cli",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:org_leadpony_justify_justify",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_github_stephenc_findbugs_findbugs_annotations",
        "@maven//:org_apache_commons_commons_configuration2",
        "@maven//:javax_json_javax_json_api",
        "@maven//:commons_jxpath_commons_jxpath",

        "//rti/mosaic-rti-api",
        "//lib/mosaic-geomath",
    ],
)