package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/**/rti/*.java"]) +
        glob(["src/main/**/rti/config/*.java"]) +
        glob(["src/main/**/rti/api/*.java"]) +
        glob(["src/main/**/rti/api/federatestarter/*.java"]) +
        glob(["src/main/**/rti/api/parameters/*.java"]) +
        glob(["src/main/**/rti/api/time/*.java"])
)

java_library(
    name = "mosaic-rti-api",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",

        "//lib/mosaic-docker",
        "//lib/mosaic-geomath",
    ],
)