package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["*.java"]) +
        glob(["cli/*.java"]) +
        glob(["config/*.java"])
)

java_library(
    name = "mosaic-starter",
    srcs = [
        ":srcs",
        ],
    resources = glob(["resources/**/*"]) + [
        "//etc",
    ],
    deps = [
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_google_code_gson_gson",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_cli_commons_cli",

        "//lib/mosaic-utils",
        "//rti/mosaic-rti-api",
        "//rti/mosaic-rti-core",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//lib/mosaic-interactions",
    ],
)