package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//java:image.bzl", "java_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/starter/MosaicClassLoader.java"]) +
        glob(["src/main/java/**/starter/MosaicSimulation.java"]) +
        glob(["src/main/java/**/starter/cli/*.java"]) +
        glob(["src/main/java/**/starter/config/*.java"])
)

java_library(
    name = "mosaic-starter",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]) + [
        "//bundle:resources",
    ],
    deps = [
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_google_code_gson_gson",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_cli_commons_cli",

        "//lib/mosaic-utils",
        "//rti/mosaic-rti-api",
        "//rti/mosaic-rti-core",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//lib/mosaic-interactions",
    ],
)


java_binary(
    name = "mosaic-app",
    srcs = glob(["src/main/java/**/starter/MosaicStarter.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_google_code_gson_gson",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_cli_commons_cli",
        "@maven//:javax_xml_parsers_jaxp_api",
        "@maven//:org_apache_johnzon_johnzon_core",

        ":mosaic-starter",
        "//lib/mosaic-utils",
        "//rti/mosaic-rti-api",
        "//rti/mosaic-rti-core",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//lib/mosaic-interactions",
        
        "//fed/mosaic-application",
        "//fed/mosaic-environment",
        "//fed/mosaic-omnetpp",
        "//fed/mosaic-mapping",
        "//fed/mosaic-output",
        "//fed/mosaic-sns",
        "//fed/mosaic-sumo",
        "//fed/mosaic-carla",
    ],
    main_class = "org.eclipse.mosaic.starter.MosaicStarter",
)

container_image(
    name = "mosaic_base_image",
    base = "@docker-base-image//image",
    workdir="/app",
)

java_image(
    name = "mosaic-image",
    srcs = glob(["src/main/java/**/starter/MosaicStarter.java"]),
    layers = [
        ":mosaic-starter",
        "//fed/mosaic-application",
        "//fed/mosaic-environment",
        "//fed/mosaic-omnetpp",
        "//fed/mosaic-mapping",
        "//fed/mosaic-output",
        "//fed/mosaic-sns",
        "//fed/mosaic-sumo",
        "//fed/mosaic-carla",
    ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_google_code_gson_gson",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_cli_commons_cli",
        "@maven//:javax_xml_parsers_jaxp_api",
        "@maven//:org_apache_johnzon_johnzon_core",

        "//lib/mosaic-utils",
        "//lib/mosaic-geomath",
        "//lib/mosaic-objects",
        "//lib/mosaic-interactions",
        "//rti/mosaic-rti-api",
        "//rti/mosaic-rti-core",
    ],
    base = ":mosaic_base_image",
    main_class = "org.eclipse.mosaic.starter.MosaicStarter",
)