package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**/app/examples/commuter/*.java"]) +
        glob(["src/main/java/**/app/examples/emergencybrake/*.java"]) +
        glob(["src/main/java/**/app/tutorial/cam/*.java"]) +
        glob(["src/main/java/**/app/tutorial/configurableapp/*.java"]) +
        glob(["src/main/java/**/app/tutorial/eventprocessing/*.java"]) +
        glob(["src/main/java/**/app/tutorial/eventprocessing/sampling/*.java"]) +
        glob(["src/main/java/**/app/tutorial/interappcommunication/*.java"]) +
        glob(["src/main/java/**/app/tutorial/interunitcommunication/*.java"]) +
        glob(["src/main/java/**/app/tutorial/traci/*.java"]) +
        glob(["src/main/java/**/app/tutorial/trafficlight/*.java"]) +
        glob(["src/main/java/**/app/tutorial/vehicle/*.java"])
)

java_library(
    name = "example-applications",
    srcs = [
        ":srcs",
        ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",

        "//lib/mosaic-objects",
        "//lib/mosaic-utils",
        "//lib/mosaic-geomath",
        "//lib/mosaic-routing",
        "//lib/mosaic-interactions",

        "//rti/mosaic-rti-api",

        "//fed/mosaic-application",
    ],
)